# nonebot-plugin-gocqhttp

./: .all-contributorsrc  .gitignore  README.md  bot.py  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
frontend/: package.json  quasar.conf.js  tsconfig.json
frontend/src/api/: api.ts  base.ts  common.ts  configuration.ts  index.ts
frontend/src/boot/: axios.ts
frontend/src/components/: AccountSelector.vue  CompositionComponent.vue  ConfigFileEditor.vue  LogsConsole.vue  RunningProcessStatus.vue
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: AccountAddView.vue  AccountConfigEditorView.vue  AccountDetailView.vue  AccountDeviceEditorView.vue  AccountView.vue  Index.vue  IndexView.vue
frontend/src/router/: routes.ts
nonebot_plugin_gocqhttp/: __init__.py  config.py  exceptions.py  external_proxy.py  log.py  plugin.py  plugin_config.py  proxy.py
nonebot_plugin_gocqhttp/process/: __init__.py  config-template.yml  config.py  download.py  manager.py  models.py  platform.py  process.py
nonebot_plugin_gocqhttp/process/device/: __init__.py  android_builds.csv  android_devices.csv  data_source.py  generator.py  models.py
nonebot_plugin_gocqhttp/web/: __init__.py  api.py  models.py  routes.py
