[tool.poetry]
name = "nonebot-plugin-gocqhttp"
version = "0.4.2"
description = "A plugin to run go-cqhttp directly in NoneBot2, without additional download and installation."
authors = ["Mix <mnixry@users.noreply.github.com>"]
license = "AGPL-3.0"
packages = [{ include = 'nonebot_plugin_gocqhttp' }]
include = ["nonebot_plugin_gocqhttp/web/dist/**/*"]
readme = "README.md"
repository = "https://github.com/mnixry/nonebot-plugin-gocqhttp"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0-beta.1"
PyYAML = "^6.0"
httpx = { extras = ["http2", "socks"], version = "^0.22.0" }
psutil = "^5.9.0"
nonebot-adapter-onebot = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]
black = "^22.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
